--- a/shopping-app/src/App.scss
+++ b/shopping-app/src/App.scss
@@ -1,6 +1,10 @@
-$btn-color: #bf2957;
-$font-family: "Dosis", sans-serif;
-$font-size: 1rem;
+@import "./styles/variables.scss";
+@import "./styles/mixins.scss";
+@import "./styles/banner.scss";
+@import "./styles/product.scss";
+@import "./styles/home.scss";
+@import "./styles/navigation.scss";
+@import "./styles/cart.scss";
 
 * {
   margin: 0;
@@ -12,405 +16,16 @@ $font-size: 1rem;
   max-width: 960px;
   margin: 0 auto;
 }
-nav {
-  -webkit-box-shadow: 0px 7px 14px -4px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0px 7px 14px -4px rgba(0, 0, 0, 0.75);
-  box-shadow: 0px 7px 14px -4px rgba(0, 0, 0, 0.75);
-  ul {
-    list-style-type: none;
-    padding: 0;
-  }
-  a {
-    text-decoration: none;
-    color: black;
-    display: block;
-    padding: 10px;
-    text-align: center;
-    &:hover {
-      background: #555;
-    }
-  }
-
-  .social {
-    max-width: 150px;
-    margin: 0 auto;
-    a.cart {
-      background-color: #ccc;
-      display: flex;
-      align-items: center;
-      img {
-        width: 40px;
-        filter: invert(0.5) sepia(1) saturate(5) hue-rotate(175deg);
-      }
-    }
-  }
-  ul.social {
-    flex: 1 1 0;
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  .social li {
-    flex: 1 1 0;
-  }
-
-  @media screen and (min-width: 768px) {
-    display: flex;
-    justify-content: flex-start;
-    .nav-links {
-      display: flex;
-      justify-content: space-between;
-      flex-grow: 1;
-    }
-    ul {
-      display: flex;
-      justify-content: flex-start;
-      align-items: flex-end;
-    }
-    li {
-      flex: 1 1 0;
-    }
-
-    .social {
-      margin: 0;
-    }
-  }
+footer {
+  position: static;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: lightgray;
+  padding: 10px;
+  color: black;
+  text-align: center;
 }
-
-.main {
-  .content {
-    &:nth-of-type(2n + 2) {
-      .image {
-        order: 1;
-      }
-    }
-    display: flex;
-    justify-content: center;
-
-    .image {
-      padding: 20px;
-      flex-grow: 1;
-      align-self: center;
-      img {
-        width: 200px;
-      }
-    }
-
-    .image-detail {
-      text-align: center;
-      flex-grow: 4;
-      padding: 30px;
-      .heading {
-        font-size: 30px;
-        padding: 10px;
-      }
-      p {
-        padding: 10px;
-      }
-
-      button {
-        color: white;
-        background-color: $btn-color;
-        padding: 10px;
-        border: none;
-        margin: 10px;
-      }
-    }
-  }
-}
-
-.banner {
-  margin-top: 5px;
-  .center {
-    text-align: center;
-    margin-top: -25px;
-    position: relative;
-  }
-
-  /* Slideshow container */
-  .slideshow-container {
-    max-width: 1000px;
-    position: relative;
-    margin: auto;
-    .mySlides {
-      display: none;
-      img {
-        width: 100%;
-        vertical-align: middle;
-      }
-    }
-  }
-
-  /* Next & previous buttons */
-  .prev,
-  .next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    padding: 16px;
-    margin-top: -22px;
-    color: white;
-    font-weight: bold;
-    font-size: $font-size;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-  }
-
-  /* Position the "next button" to the right */
-  .next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-  }
-
-  /* On hover, add a black background color with a little bit see-through */
-  .prev:hover,
-  .next:hover {
-    background-color: rgba(0, 0, 0, 0.8);
-  }
-
-  /* Caption text */
-  .text {
-    color: #f2f2f2;
-    font-size: $font-size;
-    padding: 8px 12px;
-    position: absolute;
-    bottom: 8px;
-    width: 100%;
-    text-align: center;
-  }
-
-  /* Number text (1/3 etc) */
-  .numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
-  }
-
-  /* The dots/bullets/indicators */
-  .dot {
-    cursor: pointer;
-    height: 5px;
-    width: 5px;
-    margin: 0 10px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-  }
-
-  .active,
-  .dot:hover {
-    background-color: #717171;
-  }
-
-  /* Fading animation */
-  .fade {
-    -webkit-animation-name: fade;
-    -webkit-animation-duration: 1.5s;
-    animation-name: fade;
-    animation-duration: 1.5s;
-  }
-
-  @-webkit-keyframes fade {
-    from {
-      opacity: 0.4;
-    }
-    to {
-      opacity: 1;
-    }
-  }
-
-  @keyframes fade {
-    from {
-      opacity: 0.4;
-    }
-    to {
-      opacity: 1;
-    }
-  }
-
-  /* On smaller screens, decrease text size */
-  @media only screen and (max-width: 300px) {
-    .prev,
-    .next,
-    .text {
-      font-size: 11px;
-    }
-  }
-}
-
-.Product {
-  display: flex;
-
-  aside {
-    flex-grow: 1;
-
-    background: #ccc;
-    ul {
-      margin: 0;
-      padding: 0 0 0 10px;
-      li {
-        list-style-type: none;
-        padding: 10px;
-        display: block;
-        border-bottom: 1px solid gray;
-      }
-    }
-  }
-  div.main {
-    flex-grow: 4;
-    display: flex;
-    flex-wrap: wrap;
-    & > div {
-      flex: 1 0 25%;
-      margin: 10px;
-      min-height: 250px;
-      flex-basis: 200px;
-      border-bottom: 1px dotted;
-      img {
-        width: 100%;
-      }
-    }
-  }
-}
-
-@mixin form {
-  .flex {
-    display: flex;
-    & > div {
-      padding: 75px 40px;
-    }
-
-    & > form {
-      padding: 40px 20px;
-    }
-  }
-
-  .group {
-    position: relative;
-    margin-bottom: 25px;
-  }
-  input[type="button"] {
-    background-color: $btn-color;
-    color: #fff;
-  }
-  input {
-    font-size: $font-size;
-    padding: 10px 0px;
-    display: block;
-    width: 100%;
-    border: none;
-    border-bottom: 1px solid #757575;
-  }
-  input:focus {
-    outline: none;
-  }
-
-  /* LABEL ======================================= */
-  label {
-    color: #999;
-    font-size: $font-size;
-    font-weight: normal;
-    position: absolute;
-    pointer-events: none;
-    left: 5px;
-    top: 10px;
-    transition: 0.2s ease all;
-    -moz-transition: 0.2s ease all;
-    -webkit-transition: 0.2s ease all;
-  }
-
-  /* active state */
-  input:focus ~ label,
-  input:valid ~ label {
-    top: -20px;
-    font-size: 14px;
-    color: #5264ae;
-  }
-
-  /* BOTTOM BARS ================================= */
-  .bar {
-    position: relative;
-    display: block;
-    width: 300px;
-  }
-  .bar:before,
-  .bar:after {
-    content: "";
-    height: 2px;
-    width: 0;
-    bottom: 1px;
-    position: absolute;
-    background: #5264ae;
-    transition: 0.2s ease all;
-    -moz-transition: 0.2s ease all;
-    -webkit-transition: 0.2s ease all;
-  }
-  .bar:before {
-    left: 50%;
-  }
-  .bar:after {
-    right: 50%;
-  }
-
-  /* active state */
-  input:focus ~ .bar:before,
-  input:focus ~ .bar:after {
-    width: 50%;
-  }
-
-  /* HIGHLIGHTER ================================== */
-  .highlight {
-    position: absolute;
-    height: 60%;
-    width: 100px;
-    top: 25%;
-    left: 0;
-    pointer-events: none;
-    opacity: 0.5;
-  }
-
-  /* active state */
-  input:focus ~ .highlight {
-    -webkit-animation: inputHighlighter 0.3s ease;
-    -moz-animation: inputHighlighter 0.3s ease;
-    animation: inputHighlighter 0.3s ease;
-  }
-
-  /* ANIMATIONS ================ */
-  @-webkit-keyframes inputHighlighter {
-    from {
-      background: #5264ae;
-    }
-    to {
-      width: 0;
-      background: transparent;
-    }
-  }
-  @-moz-keyframes inputHighlighter {
-    from {
-      background: #5264ae;
-    }
-    to {
-      width: 0;
-      background: transparent;
-    }
-  }
-  @keyframes inputHighlighter {
-    from {
-      background: #5264ae;
-    }
-    to {
-      width: 0;
-      background: transparent;
-    }
-  }
-}
-
 .Login {
   @include form();
 }
