--- a/shopping-app/src/styles/product.scss
+++ b/shopping-app/src/styles/product.scss
@@ -17,14 +17,40 @@
   }
   div.main {
     flex-grow: 4;
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    margin: 10px;
+    grid-gap: 10px;
     flex-wrap: wrap;
-    & > div {
-      flex: 1 1 22%;
-      margin: 10px;
-      max-width: 23%;
-      img {
+    & > div.product {
+      padding: 10px;
+      div.description {
+        background-color: lightgray;
+        height: 5.5em;
+        overflow: hidden;
+        padding: 5px;
+        border-radius: 5px;
+      }
+      div.title {
+        height: 4.5em;
+      }
+      div.input-group {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        button {
+          color: white;
+          background-color: #bf2957;
+          padding: 10px;
+          border: none;
+          margin: 10px;
+        }
+      }
+      div.image {
         width: 100%;
+        img {
+          width: 100%;
+        }
       }
     }
   }
