--- a/shopping-app/src/styles/product.scss
+++ b/shopping-app/src/styles/product.scss
@@ -1,3 +1,5 @@
+@import "./variables.scss";
+
 .Product {
   display: flex;
 
@@ -40,10 +42,11 @@
         align-items: center;
         button {
           color: white;
-          background-color: #bf2957;
+          background-color: $btn-color;
           padding: 10px;
           border: none;
           margin: 10px;
+          cursor: pointer;
         }
       }
       div.image {
