--- a/shopping-app/src/styles/cart.scss
+++ b/shopping-app/src/styles/cart.scss
@@ -1,9 +1,4 @@
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-* {
-  box-sizing: border-box;
-}
+@import "./variables.scss";
 
 .open-button {
   background-color: #555;
@@ -21,29 +16,85 @@ body {
 .chat-popup {
   position: fixed;
   bottom: 0;
-  right: 15px;
-  border: 3px solid #f1f1f1;
+  right: 6.5%;
   z-index: 9;
+  width: 25%;
 }
 
 .form-container {
-  max-width: 300px;
-  min-height: 60vh;
-  padding: 10px;
+  width: 100%;
   background-color: white;
+  .cart-header {
+    background-color: black;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    & > div {
+      display: flex;
+      align-self: center;
+      span {
+        align-self: flex-end;
+        padding-left: 10px;
+      }
+    }
+  }
+  .content {
+    min-height: 70vh;
+    background-color: lightgray;
+    .empty-cart {
+      text-align: center;
+      padding-top: 50%;
+    }
+    .content-item {
+      button {
+        background-color: $btn-color;
+        border: none;
+        border-radius: 15px;
+        color: white;
+      }
+      display: flex;
+      justify-content: space-between;
+      background-color: white;
+      margin: 10px 0;
+      padding: 10px;
+      .item-box {
+        display: flex;
+        img {
+          width: 50px;
+        }
+      }
+    }
+  }
+  .proceed {
+    text-align: center;
+  }
+  h4 {
+    padding-left: 10px;
+  }
   .btn {
-    background-color: #4caf50;
     color: white;
     padding: 16px 20px;
     border: none;
     cursor: pointer;
     width: 100%;
     margin-bottom: 10px;
-    opacity: 0.8;
+    &.btn-cancel {
+      width: 30px;
+      padding: 10px;
+      color: white;
+      background-color: transparent;
+      margin-bottom: 0;
+    }
   }
 
   .cancel {
-    background-color: red;
+    background-color: $btn-color;
+    display: flex;
+    justify-content: space-between;
+  }
+  .start {
+    background: $btn-color;
   }
 }
 
