home page styling updated

--- a/shopping-app/src/styles/cart.scss
+++ b/shopping-app/src/styles/cart.scss
@@ -19,6 +19,11 @@
   right: 6.5%;
   z-index: 9;
   width: 25%;
+
+  @media (max-width: 991.98px) {
+    right: 0;
+    width: 100%;
+  }
 }
 
 .form-container {
