--- a/shopping-app/src/App.scss
+++ b/shopping-app/src/App.scss
@@ -11,9 +11,6 @@
   font-family: $font-family;
 }
 
-.wrapper {
-  margin: 0 auto;
-}
 a {
   text-decoration: none;
   color: black;
@@ -25,24 +22,36 @@ footer {
   bottom: 0;
   width: 100%;
   background-color: lightgray;
-  padding: 10px;
+  padding: 10px 0;
   color: black;
   text-align: center;
 }
+.wrapper {
+  margin: 0 auto;
+  width: 100%;
+}
 
-@media (min-width: 568px) {
+@media (min-width: 576px) {
   .wrapper {
-    width: 550px;
+    max-width: 540px;
   }
 }
+
+@media (min-width: 768px) {
+  .wrapper {
+    max-width: 720px;
+  }
+}
+
 @media (min-width: 992px) {
   .wrapper {
-    width: 970px;
+    max-width: 960px;
   }
 }
+
 @media (min-width: 1200px) {
   .wrapper {
-    width: 1170px;
+    max-width: 1140px;
   }
 }
 .Login {
