--- a/shopping-app/src/styles/banner.scss
+++ b/shopping-app/src/styles/banner.scss
@@ -33,7 +33,7 @@
     margin-top: -22px;
     color: white;
     font-weight: bold;
-    font-size: $font-size;
+    font-size: $font-size-default$font-size-default;
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
     user-select: none;
@@ -54,7 +54,7 @@
   /* Caption text */
   .text {
     color: #f2f2f2;
-    font-size: $font-size;
+    font-size: $font-size-default;
     padding: 8px 12px;
     position: absolute;
     bottom: 8px;
