--- a/shopping-app/src/styles/home.scss
+++ b/shopping-app/src/styles/home.scss
@@ -14,6 +14,9 @@
       align-self: center;
       img {
         width: 200px;
+        @media (max-width: 767.98px) {
+          width: 125px;
+        }
       }
     }
 
@@ -21,6 +24,9 @@
       text-align: center;
       flex-grow: 4;
       padding: 30px;
+      @media (max-width: 767.98px) {
+        padding: 30px 10px;
+      }
       .heading {
         font-size: 30px;
         padding: 10px;
