--- a/shopping-app/src/styles/product.scss
+++ b/shopping-app/src/styles/product.scss
@@ -2,11 +2,55 @@
 
 .Product {
   display: flex;
+  @media (max-width: 767.98px) {
+    flex-direction: column;
+  }
+  @media (min-width: 768px) and (max-width: 991.98px) {
+    flex-direction: row;
+  }
+  @media (min-width: 991.98px) {
+    flex-direction: row;
+  }
 
   aside {
     min-width: 250px;
     background: #ccc;
+    select {
+      @media (max-width: 767.98px) {
+        display: block;
+      }
+      @media (min-width: 768px) and (max-width: 991.98px) {
+        display: none;
+      }
+      @media (min-width: 991.98px) {
+        display: none;
+      }
+    }
+    .ui-select {
+      & > div > span {
+        display: none;
+      }
+      & > div > select {
+        width: 100%;
+        padding: 10px;
+        background-color: $btn-color;
+        color: white;
+        font-size: $font-size-default;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+      }
+    }
     ul {
+      @media (max-width: 767.98px) {
+        display: none;
+      }
+      @media (min-width: 768px) and (max-width: 991.98px) {
+        display: block;
+      }
+      @media (min-width: 991.98px) {
+        display: block;
+      }
       margin: 0;
       padding: 0 0 0 10px;
       li {
@@ -14,6 +58,12 @@
         padding: 10px;
         display: block;
         border-bottom: 1px solid gray;
+
+        &.active {
+          a {
+            font-weight: bold;
+          }
+        }
       }
     }
   }
@@ -24,6 +74,12 @@
     margin: 10px;
     grid-gap: 10px;
     flex-wrap: wrap;
+    @media (max-width: 767.98px) {
+      grid-template-columns: repeat(1, 1fr);
+    }
+    @media (min-width: 768px) and (max-width: 991.98px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
     & > div.product {
       padding: 10px;
       div.description {
