--- a/shopping-app/src/styles/product.scss
+++ b/shopping-app/src/styles/product.scss
@@ -15,17 +15,7 @@
   aside {
     min-width: 250px;
     background: #ccc;
-    select {
-      @media (max-width: 767.98px) {
-        display: block;
-      }
-      @media (min-width: 768px) and (max-width: 991.98px) {
-        display: none;
-      }
-      @media (min-width: 991.98px) {
-        display: none;
-      }
-    }
+
     .ui-select {
       & > div > span {
         display: none;
@@ -36,9 +26,23 @@
         background-color: $btn-color;
         color: white;
         font-size: $font-size-default;
-        -webkit-appearance: none;
-        -moz-appearance: none;
-        appearance: none;
+      }
+    }
+    select {
+      width: 100%;
+      padding: 10px;
+      background-color: $btn-color;
+      color: white;
+      font-size: $font-size-default;
+
+      @media (max-width: 767.98px) {
+        display: block;
+      }
+      @media (min-width: 768px) and (max-width: 991.98px) {
+        display: none;
+      }
+      @media (min-width: 991.98px) {
+        display: none;
       }
     }
     ul {
